--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,9 +10,42 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  
 }
 
 img {
-  display: block;
-  max-width: 100%;
+   display: block;
+   max-width: 100%;
+}
+.input__place{
+   text-align: center;
+   margin-bottom: 30px;
+   
+}
+
+.timer {
+   display: flex;
+   font-size: 30px;
+   max-width: max-content;
+   margin: 0 auto;
+}
+
+.field {
+   position: relative;
+
+   margin-left: 10px;
+   margin-right: 10px;
+   padding-bottom: 15px;
+   text-align: center;
+   font-family: 'Ubuntu';
+}
+
+
+
+.label {
+   display: block;
+   text-align: center;
+   text-transform: uppercase;
+   font-size: 14px;
+   font-family: 'Ubuntu';
 }
